tdf#133976 no need to update navigation history during export

Change-Id: Ie815b623ee39ed1a0b2fffd436cfcea2b76fe55a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191728
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>